@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <aspectj.version>1.9.8</aspectj.version>
   </properties>
 
   <dependencies>
@@ -57,6 +58,28 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.17</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-java-commons -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-java-commons</artifactId>
+      <version>2.25.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.29.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.21.1</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -77,12 +100,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
-          <systemPropertyVariables>
-            <browser>chrome</browser>
-          </systemPropertyVariables>
+          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
+          <!-- <argLine>
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine> -->
           <suiteXmlFiles>
-            <file>src\test\java\Tests\TestSuite\CarasouelTestSuite.xml</file>
+            <file>src\test\java\Tests\TestSuite\CarasouelTestSuiteDataDriven.xml</file>
           </suiteXmlFiles>
+          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
     </plugins>
